--- a/Users/package.json
+++ b/Users/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^1.9.1",
     "popper.js": "^1.16.1",
+    "sweetalert2": "^10.15.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
