--- a/Users/package.json
+++ b/Users/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "jquery": "^1.9.1",
     "popper.js": "^1.16.1",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^10.15.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
