--- a/Users/package.json
+++ b/Users/package.json
@@ -14,6 +14,8 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^1.9.1",
+    "material-kit": "^2.0.4",
+    "nouislider": "^14.6.3",
     "popper.js": "^1.16.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.15.5",
