--- a/AdminDashboard/package.json
+++ b/AdminDashboard/package.json
@@ -18,10 +18,12 @@
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
+    "lodash": "^4.17.21",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
