--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "sequelize": "^6.5.0",
+    "stripe": "^8.140.0",
     "twilio": "^3.58.0"
   }
 }
