--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.19.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "eslint": "^7.21.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -26,6 +27,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "sequelize": "^6.5.0",
+    "stripe": "^8.140.0",
     "twilio": "^3.58.0"
   }
 }
