--- a/Users/package.json
+++ b/Users/package.json
@@ -17,10 +17,12 @@
     "material-kit": "^2.0.4",
     "nouislider": "^14.6.4",
     "popper.js": "^1.16.1",
+    "stripe": "^8.140.0",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.15.5",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
+    "vue-stripe-checkout": "^3.5.15",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
