--- a/Users/package.json
+++ b/Users/package.json
@@ -21,6 +21,7 @@
     "sweetalert2": "^10.15.5",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
+    "vue-socket.io": "^3.0.10",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
