--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vue-stripe/vue-stripe": "^4.1.8",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -27,6 +28,8 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "sequelize": "^6.5.0",
+    "socket.io": "^4.0.0",
+    "soket.io": "0.0.1-security",
     "stripe": "^8.140.0",
     "twilio": "^3.58.0"
   }
