--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,9 @@
     "socket.io": "^4.0.0",
     "soket.io": "0.0.1-security",
     "stripe": "^8.140.0",
-    "twilio": "^3.58.0"
+    "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui-express": "^4.1.6",
+    "twilio": "^3.58.0",
+    "yamljs": "^0.3.0"
   }
 }
