--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "soket.io": "0.0.1-security",
     "stripe": "^8.140.0",
     "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui": "^3.46.0",
     "swagger-ui-express": "^4.1.6",
     "twilio": "^3.58.0",
     "yamljs": "^0.3.0"
